Changes nodes to 2 per shards with 1 replica.
Changes ES system properties

Adds remote debugging to tomcat by default